--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
           <title> TITULO PA LA BANDA </title>
           <link href="CSS/css.css" rel="stylesheet" type="text/css">
         </head>
-        <H1> COMO SERIA CARLOS??</H1>
+        <H1> COMO SERIA CARLOS????</H1>
     </body>
 </html>
